hello-world-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello-world-test.com
    secretName: hello-world-tls
  rules:
    - host: hello-world-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
